Fix stretch

--- a/static/scripts/style.css
+++ b/static/scripts/style.css
@@ -70,10 +70,6 @@ header, section {
 	flex: 2;
 }
 
-.extra_column {
-	display: none;
-}
-
 h1, h2, h3 {
 	margin: 0;
 }
